[⚙️ FEATURE] 카카오톡 SDK 프로젝트 설정

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    // 카카오톡 지도 SDK 의존성 추가
+    implementation 'com.kakao.maps.open:android:2.12.8'
 }
