--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".AgreeTermActivity"
             android:exported="false" />
         <activity
+            android:name=".LoginTitle"
+            android:exported="false" />
+        <activity
             android:name=".DetailHospitalActivity"
             android:exported="false" />
         <activity
