[🐛 BUG_FIXED] gradle 오류 수정

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,15 +1,6 @@
 pluginManagement {
     repositories {
-        // 카카오톡 지도 SDK 추가
-        maven { url 'https://devrepo.kakao.com/nexus/repository/kakaomap-releases/' }
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-
-
-repositories {
-        google {
+            google {
             content {
                 includeGroupByRegex("com\\.android.*")
                 includeGroupByRegex("com\\.google.*")
@@ -25,6 +16,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        // 카카오 지도 Maven 저장소 추가
+        maven { url 'https://devrepo.kakao.com/nexus/repository/kakaomap-releases/' }
     }
 }
 
