--- a/android/app/.gitignore
+++ b/android/app/.gitignore
@@ -35,3 +35,9 @@ Thumbs.db
 captures/
 .externalNativeBuild
 .cxx/
+
+# Android Studio
+/.idea/workspace.xml
+/.idea/misc.xml
+/.idea/tasks.xml
+/.idea/dictionaries
