[⚙️ FEAT] 다음 창으로 넘어가능 기능 추가 [🔧 LITTLE_FIX] 이름 틀린것 수정 [ 🎨 DESIGN] 약관확인 UI 생성

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".AgreeTermActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginTitle"
+            android:name=".AgreeTermActivity"
             android:exported="false" />
         <activity
             android:name=".DetailHospitalActivity"
