--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediQuick">
         <activity
-            android:name=".LoginTitle"
+            android:name=".AgreeTermActivity"
             android:exported="false" />
         <activity
             android:name=".DetailHospitalActivity"
