--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,6 +12,9 @@ android {
         targetSdk 36
         versionCode 1
         versionName "1.0"
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a" // 실제 디바이스 아키텍처
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
