--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,9 +3,23 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file("local.properties")
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { stream ->
+        localProperties.load(stream)
+    }
+}
+def kakaoKey = localProperties.getProperty("kakao_native_key", "")
+
+
 android {
     namespace 'com.emergsaver.mediquick'
     compileSdk 36
+
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         applicationId "com.emergsaver.mediquick"
@@ -16,8 +30,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a" // 실제 디바이스 아키텍처
         }
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "KAKAO_NATIVE_KEY", "\"${kakaoKey}\""
     }
 
     buildTypes {
