--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     // 카카오톡 지도 SDK 의존성 추가
     implementation 'com.kakao.maps.open:android:2.12.8'
+
+    // 위치 서비스 라이브러리 추가
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
 }
