--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,6 +55,12 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
+    // 카카오톡 지도 SDK 의존성 추가
+    implementation 'com.kakao.maps.open:android:2.12.8'
+
+    // 위치 서비스 라이브러리 추가
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
     implementation 'com.google.firebase:firebase-firestore'
 
@@ -62,6 +68,4 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
     implementation 'com.google.android.material:material:1.12.0'
-
-
 }
