--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,6 +60,12 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation 'androidx.fragment:fragment-ktx:1.6.0'
 
+    // 카카오톡 지도 SDK 의존성 추가
+    implementation 'com.kakao.maps.open:android:2.12.8'
+
+    // 위치 서비스 라이브러리 추가
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth'
