--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a" // 실제 디바이스 아키텍처
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
         buildConfigField "String", "KAKAO_NATIVE_KEY", "\"${kakaoKey}\""
     }
