[🐛 BUG_FIX] Firebase Auth 관련 의존성 오류 수정

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,12 @@
 pluginManagement {
     repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+
+
+repositories {
         google {
             content {
                 includeGroupByRegex("com\\.android.*")
