--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,11 +46,12 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-auth'
 
     implementation 'com.squareup.retrofit2:retrofit:2.11.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-    implementation 'com.google.android.material:material:1.12.0'
+   // implementation 'com.google.android.material:material:1.12.0'
 
 
 }
