--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:deprecation"
+    }
 }
 
 dependencies {
@@ -76,7 +79,4 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.11.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-   // implementation 'com.google.android.material:material:1.12.0'
-
-
 }
