--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,6 +18,8 @@ dependencyResolutionManagement {
         mavenCentral()
         // 카카오 지도 Maven 저장소 추가
         maven { url 'https://devrepo.kakao.com/nexus/repository/kakaomap-releases/' }
+        // 카카오 로그인 maven 저장소 추가
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
 }
 
