[⚙️ FEAT] 카카오 로그인 팝업기능 구현 [🐛 BUG_FIX] 수정하면서 이름변경으로 오류 수정 [📚 DOCS] 기존 카카오톡 로그인 방식 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -69,21 +69,24 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
+                <!--<action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="${KAKAO_SCHEME}" />
+                <data android:scheme="${KAKAO_SCHEME}" />-->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
         android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
-        android:exported="true">
+        android:exported="true"
+        android:launchMode="singleTask">
         <intent-filter>
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="${KAKAO_SCHEME}" />
+            <data
+                android:scheme="${KAKAO_SCHEME}"
+                android:host="oauth"/>
         </intent-filter>
     </activity>
     </application>
