--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
             android:name=".CategoryActivity"
             android:exported="false" />
         <activity
-            android:name=".InsertActivity"
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
