--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
     // Image
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+
+    // FlexLayout
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
